[FIX] Increase font size on mobile

--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -711,7 +711,6 @@ section:hover .section-heading span {
 
   @media (max-width: 600px){
     line-height: 24px;
-    font-size: 15px;
 
     figure {  
       figcaption {
